font stílusok, javítások

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -63,6 +63,7 @@
       }
     },
     "open": "Öffnen",
+    "readMore": "Weiterlesen",
     "category": "Kategorie",
     "priceBand": "Preisklasse",
     "tags": "Tags",
@@ -294,6 +295,8 @@
     "defaultPlaceholderCardImageDescription": "Dieses Bild wird auf Ortskarten angezeigt, wenn kein Bild festgelegt ist",
     "defaultPlaceholderDetailHeroImage": "Standard-Platzhalter-Hero-Bild für Details",
     "defaultPlaceholderDetailHeroImageDescription": "Dieses Bild wird auf Ortsdetailseiten angezeigt, wenn kein Hero-Bild festgelegt ist",
+    "defaultEventPlaceholderCardImage": "Standard-Platzhalterbild für Veranstaltungskarten",
+    "defaultEventPlaceholderCardImageDescription": "Dieses Bild wird auf Veranstaltungskarten angezeigt, wenn kein Bild festgelegt ist",
     "brandBadgeIcon": "Markenabzeichen-Symbol",
     "brandBadgeIconDescription": "Symbol, das im Markenabzeichen auf öffentlichen Seiten angezeigt wird",
     "faviconUrl": "Favicon-URL",
@@ -433,6 +436,8 @@
     "startDate": "Startdatum",
     "endDate": "Enddatum",
     "isPinned": "Veranstaltung anheften",
+    "showOnMap": "In Kartenansicht anzeigen",
+    "showOnMapHint": "Ob die Veranstaltung im Veranstaltungsfeld der Kartenansicht angezeigt wird",
     "selectPlace": "Ort auswählen",
     "place": "Ort",
     "heroImage": "Hero-Bild",
