--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -63,6 +63,7 @@
       }
     },
     "open": "Open",
+    "readMore": "Read more",
     "category": "Category",
     "priceBand": "Price Band",
     "tags": "Tags",
@@ -301,6 +302,8 @@
     "defaultPlaceholderCardImageDescription": "This image will be shown on place cards when no image is set",
     "defaultPlaceholderDetailHeroImage": "Default Placeholder Detail Hero Image",
     "defaultPlaceholderDetailHeroImageDescription": "This image will be shown on place detail pages when no hero image is set",
+    "defaultEventPlaceholderCardImage": "Default Event Placeholder Card Image",
+    "defaultEventPlaceholderCardImageDescription": "This image will be shown on event cards when no image is set",
     "brandBadgeIcon": "Brand Badge Icon",
     "brandBadgeIconDescription": "Icon displayed in the brand badge on public pages",
     "faviconUrl": "Favicon URL",
@@ -439,6 +442,8 @@
     "startDate": "Start date",
     "endDate": "End date",
     "isPinned": "Pin this event",
+    "showOnMap": "Show in map view",
+    "showOnMapHint": "Whether the event appears in the map view event box",
     "selectPlace": "Select place",
     "place": "Place",
     "heroImage": "Hero Image",
