--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -116,7 +116,7 @@
       "rainSafe": "Regensicheres Programm",
       "contextFilters": "Kontextbasierte Filter"
     },
-    "yourLocation": "Hier bin ich jetzt",
+    "yourLocation": "Hier bin ich jetzt.",
     "showMyLocation": "Meine Position anzeigen",
     "showRoute": "Route anzeigen",
     "hideRoute": "Route ausblenden",
