--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -116,7 +116,7 @@
       "rainSafe": "Rain-safe program",
       "contextFilters": "Context-based filters"
     },
-    "yourLocation": "I'm here now",
+    "yourLocation": "I'm here now.",
     "showMyLocation": "Show my location",
     "showRoute": "Show route",
     "hideRoute": "Hide route",
