--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -116,7 +116,7 @@
       "rainSafe": "Esőbiztos program",
       "contextFilters": "Kontextus alapú szűrők"
     },
-    "yourLocation": "Itt vagy most",
+    "yourLocation": "Itt vagy most.",
     "showMyLocation": "Mutasd a helyzetem",
     "showRoute": "Útvonal mutatása",
     "hideRoute": "Útvonal elrejtése",
