--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -453,6 +453,8 @@
     "disable2FA": "Disable 2FA",
     "primaryDomain": "Primary Domain",
     "shortDescription": "Short Description",
+    "shortDescriptionPlaceholder": "Short description for the list view card (richtext)",
+    "shortDescriptionHint": "This field appears on the list view cards",
     "roles": {
       "viewer": "Viewer",
       "editor": "Editor",
