wip, számlázás csomagok

--- a/apps/web/src/i18n/locales/de.json
+++ b/apps/web/src/i18n/locales/de.json
@@ -245,6 +245,123 @@
     "selectPriceBand": "Preisklasse auswählen",
     "heroImageUrl": "Hero-Bild URL",
     "heroImageDescription": "URL für das auf Karten angezeigte Bild",
+    "billing": "Abrechnung & Plan",
+    "plan": "Plan",
+    "planFree": "Kostenlos",
+    "planBasic": "Basis",
+    "planPro": "Pro",
+    "planStatus": "Plan-Status",
+    "planValidUntil": "Plan gültig bis",
+    "featuredSlots": "Hervorgehobene Plätze",
+    "switchToPro": "Zu Pro wechseln",
+    "siteEdit": "Site bearbeiten",
+    "siteUpdated": "Site erfolgreich aktualisiert",
+    "siteNotFound": "Site nicht gefunden",
+    "loadSiteFailed": "Site konnte nicht geladen werden",
+    "updateSiteFailed": "Site konnte nicht aktualisiert werden",
+    "selectBrand": "Marke auswählen",
+    "brand": "Marke",
+    "siteEdit": {
+      "tabs": {
+        "overview": "Übersicht",
+        "domain": "Domain & URL",
+        "appearance": "Erscheinungsbild",
+        "map": "Karte",
+        "features": "Funktionen",
+        "subscription": "Abonnement"
+      },
+      "overview": {
+        "title": "Grundinformationen"
+      },
+      "domain": {
+        "title": "Domain & URL",
+        "domains": "Domains",
+        "siteKeys": "SiteKeys",
+        "primary": "Primär",
+        "aliases": "Aliase",
+        "defaultLang": "Standardsprache",
+        "addDomain": "Neue Domain hinzufügen",
+        "domain": "Domain",
+        "setAsPrimary": "Als primäre Domain festlegen",
+        "setPrimary": "Als primär festlegen",
+        "add": "Hinzufügen",
+        "noDomains": "Keine Domains hinzugefügt",
+        "noSiteKeys": "Keine SiteKeys",
+        "domainRequired": "Domain ist erforderlich",
+        "domainAdded": "Domain hinzugefügt"
+      },
+      "appearance": {
+        "title": "Erscheinungsbild",
+        "brandDefaults": "Marken-Standardeinstellungen",
+        "notSet": "Nicht festgelegt",
+        "logoUrl": "Logo-URL",
+        "faviconUrl": "Favicon-URL",
+        "override": "überschreiben",
+        "placeholders": "Platzhalterbilder",
+        "placeholderCard": "Karten-Platzhalter",
+        "placeholderHero": "Hero-Platzhalter",
+        "placeholderEventCard": "Ereigniskarten-Platzhalter",
+        "saved": "Erscheinungsbild gespeichert",
+        "createInstanceFirst": "Erstellen Sie zuerst eine SiteInstance für diese Sprache",
+        "instanceNotFound": "SiteInstance nicht gefunden"
+      },
+      "map": {
+        "title": "Karte",
+        "map": "Karte",
+        "defaultTown": "Standardstadt",
+        "noTown": "Keine Stadt",
+        "saved": "Karteneinstellungen gespeichert",
+        "createInstanceFirst": "Erstellen Sie zuerst eine SiteInstance für diese Sprache",
+        "instanceNotFound": "SiteInstance nicht gefunden"
+      },
+      "features": {
+        "title": "Funktionen",
+        "enableEvents": "Ereignisse aktivieren",
+        "enableBlog": "Blog / Statische Seiten aktivieren",
+        "enableStaticPages": "Statische Seiten aktivieren",
+        "isCrawlable": "Indizierbar (SEO)",
+        "saved": "Funktionen gespeichert",
+        "createInstanceFirst": "Erstellen Sie zuerst eine SiteInstance für diese Sprache",
+        "instanceNotFound": "SiteInstance nicht gefunden"
+      },
+      "subscription": {
+        "title": "Abonnement",
+        "limits": "Grenzen",
+        "status": "Status",
+        "statusActive": "Aktiv",
+        "statusTrial": "Testphase",
+        "statusPastDue": "Überfällig",
+        "statusCanceled": "Gekündigt",
+        "upgradeToPro": "Zu Pro wechseln",
+        "lockedInPro": "Im Pro-Plan verfügbar",
+        "contactToUpgrade": "Bitte kontaktieren Sie uns für einen Planwechsel",
+        "planUpdated": "Plan aktualisiert",
+        "saved": "Gespeichert",
+        "advancedSettings": "Erweiterte Einstellungen"
+      },
+      "quickActions": "Schnellaktionen",
+      "openPublicPage": "Öffentliche Seite öffnen"
+    },
+    "beFeaturedPlace": "Hervorgehobener Ort werden",
+    "featuredPlacementNotAvailable": "Dieser Ort wird nicht in Auflistungen und auf der Karte hervorgehoben.",
+    "isFeatured": "Hervorgehoben",
+    "isFeaturedHint": "Diesen Ort prominent in Auflistungen anzeigen",
+    "featuredUntil": "Hervorgehoben bis",
+    "featuredUntilHint": "Leer lassen für dauerhaft hervorgehobenen Status",
+    "expires": "läuft ab",
+    "featuredPlacement": "Hervorgehobene Platzierung",
+    "unlimitedImages": "Unbegrenzte Bilder",
+    "eventDisplay": "Ereignisanzeige",
+    "upTo15Images": "Bis zu 15 Bilder",
+    "upTo3Events": "Bis zu 3 Ereignisse",
+    "upTo3Images": "Bis zu 3 Bilder",
+    "events": "Ereignisse",
+    "billingComingSoon": "Abrechnungsverwaltung kommt bald",
+    "managePlan": "Plan verwalten",
+    "upgradePlan": "Plan upgraden",
+    "availableInProPlan": "Verfügbar im Pro-Plan",
+    "upgradeToPro": "Auf Pro upgraden, um hervorgehobene Platzierung zu aktivieren",
+    "activateFeatured": "Hervorgehobene Platzierung aktivieren",
     "dashboardCards": {
       "userProfile": "Benutzerprofil",
       "userProfileDesc": "Ihr Profil anzeigen und bearbeiten",
