--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -245,6 +245,122 @@
     "selectPriceBand": "Select price band",
     "heroImageUrl": "Hero Image URL",
     "heroImageDescription": "URL for the image displayed on cards",
+    "billing": "Billing & Plan",
+    "plan": "Plan",
+    "planFree": "Free",
+    "planBasic": "Basic",
+    "planPro": "Pro",
+    "planStatus": "Plan Status",
+    "planValidUntil": "Plan Valid Until",
+    "featuredSlots": "Featured Slots",
+    "switchToPro": "Switch to Pro",
+    "siteUpdated": "Site updated successfully",
+    "siteNotFound": "Site not found",
+    "loadSiteFailed": "Failed to load site",
+    "updateSiteFailed": "Failed to update site",
+    "selectBrand": "Select Brand",
+    "brand": "Brand",
+    "siteEdit": {
+      "tabs": {
+        "overview": "Overview",
+        "domain": "Domain & URL",
+        "appearance": "Appearance",
+        "map": "Map",
+        "features": "Features",
+        "subscription": "Subscription"
+      },
+      "overview": {
+        "title": "Basic Information"
+      },
+      "domain": {
+        "title": "Domain & URL",
+        "domains": "Domains",
+        "siteKeys": "SiteKeys",
+        "primary": "Primary",
+        "aliases": "Aliases",
+        "defaultLang": "Default Language",
+        "addDomain": "Add New Domain",
+        "domain": "Domain",
+        "setAsPrimary": "Set as Primary Domain",
+        "setPrimary": "Set Primary",
+        "add": "Add",
+        "noDomains": "No domains added",
+        "noSiteKeys": "No SiteKeys",
+        "domainRequired": "Domain is required",
+        "domainAdded": "Domain added"
+      },
+      "appearance": {
+        "title": "Appearance",
+        "brandDefaults": "Brand Defaults",
+        "notSet": "Not set",
+        "logoUrl": "Logo URL",
+        "faviconUrl": "Favicon URL",
+        "override": "override",
+        "placeholders": "Placeholder Images",
+        "placeholderCard": "Card placeholder",
+        "placeholderHero": "Hero placeholder",
+        "placeholderEventCard": "Event card placeholder",
+        "saved": "Appearance saved",
+        "createInstanceFirst": "First create a SiteInstance for this language",
+        "instanceNotFound": "SiteInstance not found"
+      },
+      "map": {
+        "title": "Map",
+        "map": "Map",
+        "defaultTown": "Default Town",
+        "noTown": "No town",
+        "saved": "Map settings saved",
+        "createInstanceFirst": "First create a SiteInstance for this language",
+        "instanceNotFound": "SiteInstance not found"
+      },
+      "features": {
+        "title": "Features",
+        "enableEvents": "Enable Events",
+        "enableBlog": "Enable Blog / Static Pages",
+        "enableStaticPages": "Enable Static Pages",
+        "isCrawlable": "Indexable (SEO)",
+        "saved": "Features saved",
+        "createInstanceFirst": "First create a SiteInstance for this language",
+        "instanceNotFound": "SiteInstance not found"
+      },
+      "subscription": {
+        "title": "Subscription",
+        "limits": "Limits",
+        "status": "Status",
+        "statusActive": "Active",
+        "statusTrial": "Trial",
+        "statusPastDue": "Past Due",
+        "statusCanceled": "Canceled",
+        "upgradeToPro": "Upgrade to Pro",
+        "lockedInPro": "Available in Pro plan",
+        "contactToUpgrade": "Please contact us to change plan",
+        "planUpdated": "Plan updated",
+        "saved": "Saved",
+        "advancedSettings": "Advanced Settings"
+      },
+      "quickActions": "Quick Actions",
+      "openPublicPage": "Open Public Page"
+    },
+    "beFeaturedPlace": "Be a Featured Place",
+    "featuredPlacementNotAvailable": "This place is not featured in listings and on the map.",
+    "isFeatured": "Featured",
+    "isFeaturedHint": "Show this place prominently in listings",
+    "featuredUntil": "Featured Until",
+    "featuredUntilHint": "Leave empty for permanent featured status",
+    "expires": "expires",
+    "featuredPlacement": "Featured placement",
+    "unlimitedImages": "Unlimited images",
+    "eventDisplay": "Event display",
+    "upTo15Images": "Up to 15 images",
+    "upTo3Events": "Up to 3 events",
+    "upTo3Images": "Up to 3 images",
+    "events": "Events",
+    "billingComingSoon": "Billing management coming soon",
+    "managePlan": "Manage Plan",
+    "upgradePlan": "Upgrade Plan",
+    "availableInProPlan": "Available in Pro plan",
+    "upgradeToPro": "Upgrade to Pro to enable featured placement",
+    "activateFeatured": "Activate Featured Placement",
     "dashboardCards": {
       "userProfile": "User Profile",
       "userProfileDesc": "View and edit your profile",
