--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -270,6 +270,150 @@
     "selectPriceBand": "Válassz ár szintet",
     "heroImageUrl": "Hero kép URL",
     "heroImageDescription": "URL a kártyán megjelenő képhez",
+    "billing": "Számlázás és csomag",
+    "plan": "Csomag",
+    "planFree": "Ingyenes",
+    "planBasic": "Alap",
+    "planPro": "Pro",
+    "planStatus": "Csomag státusz",
+    "planValidUntil": "Csomag érvényes",
+    "featuredSlots": "Kiemelt helyek",
+    "switchToPro": "Váltás Pro csomagra",
+    "siteUpdated": "Site sikeresen frissítve",
+    "siteNotFound": "Site nem található",
+    "loadSiteFailed": "A site betöltése sikertelen",
+    "updateSiteFailed": "A site frissítése sikertelen",
+    "selectBrand": "Válassz márkát",
+    "brand": "Márka",
+    "siteEdit": {
+      "tabs": {
+        "overview": "Áttekintés",
+        "domain": "Domain & URL",
+        "appearance": "Megjelenés",
+        "map": "Térkép",
+        "features": "Funkciók",
+        "subscription": "Előfizetés"
+      },
+      "overview": {
+        "title": "Alap adatok"
+      },
+      "domain": {
+        "title": "Domain & URL",
+        "domains": "Domain-ek",
+        "siteKeys": "SiteKey-ek",
+        "primary": "Primary",
+        "aliases": "Aliasok",
+        "defaultLang": "Alapértelmezett nyelv",
+        "addDomain": "Új domain hozzáadása",
+        "domain": "Domain",
+        "setAsPrimary": "Beállítás primary domain-ként",
+        "setPrimary": "Set Primary",
+        "add": "Hozzáadás",
+        "noDomains": "Nincs domain hozzáadva",
+        "noSiteKeys": "Nincs SiteKey",
+        "domainRequired": "Domain megadása kötelező",
+        "domainAdded": "Domain hozzáadva"
+      },
+      "appearance": {
+        "title": "Megjelenés",
+        "brandDefaults": "Brand alapértelmezések",
+        "notSet": "Nincs beállítva",
+        "logoUrl": "Logo URL",
+        "faviconUrl": "Favicon URL",
+        "override": "override",
+        "placeholders": "Placeholder képek",
+        "placeholderCard": "Card placeholder",
+        "placeholderHero": "Hero placeholder",
+        "placeholderEventCard": "Event card placeholder",
+        "saved": "Megjelenés mentve",
+        "createInstanceFirst": "Először hozz létre egy SiteInstance-t ezen a nyelven",
+        "instanceNotFound": "SiteInstance nem található"
+      },
+      "map": {
+        "title": "Térkép",
+        "map": "Térkép",
+        "defaultTown": "Alapértelmezett település",
+        "noTown": "Nincs település",
+        "saved": "Térkép beállítások mentve",
+        "createInstanceFirst": "Először hozz létre egy SiteInstance-t ezen a nyelven",
+        "instanceNotFound": "SiteInstance nem található"
+      },
+      "features": {
+        "title": "Funkciók",
+        "enableEvents": "Események engedélyezése",
+        "enableBlog": "Blog / Statikus oldalak engedélyezése",
+        "enableStaticPages": "Statikus oldalak engedélyezése",
+        "isCrawlable": "Indexelhető (SEO)",
+        "saved": "Funkciók mentve",
+        "createInstanceFirst": "Először hozz létre egy SiteInstance-t ezen a nyelven",
+        "instanceNotFound": "SiteInstance nem található"
+      },
+      "subscription": {
+        "title": "Előfizetés",
+        "limits": "Korlátok",
+        "status": "Státusz",
+        "statusActive": "Aktív",
+        "statusTrial": "Próbaidőszak",
+        "statusPastDue": "Lejárt",
+        "statusCanceled": "Megszakítva",
+        "upgradeToPro": "Váltás Pro-ra",
+        "lockedInPro": "Pro csomagban elérhető",
+        "contactToUpgrade": "Kérjük, lépjen kapcsolatba a csomagváltáshoz",
+        "planUpdated": "Csomag frissítve",
+        "saved": "Mentve",
+        "advancedSettings": "Haladó beállítások"
+      },
+      "quickActions": "Gyors műveletek",
+      "openPublicPage": "Publikus oldal megnyitása"
+    },
+    "beFeaturedPlace": "Legyen kiemelt hely",
+    "featuredPlacementNotAvailable": "Ez a hely nem jelenik meg kiemelten a listákban és a térképen.",
+    "isFeatured": "Kiemelt",
+    "isFeaturedHint": "Ez a hely kiemelten jelenik meg a listázásokban",
+    "featuredUntil": "Kiemelt státusz vége",
+    "featuredUntilHint": "Hagyd üresen a végleges kiemelt státuszhoz",
+    "expires": "lejár",
+    "featuredPlacement": "Kiemelt megjelenés",
+    "unlimitedImages": "Korlátlan képek",
+    "eventDisplay": "Események megjelenítése",
+    "upTo15Images": "Akár 15 kép",
+    "upTo3Events": "Akár 3 esemény",
+    "upTo3Images": "Akár 3 kép",
+    "events": "Események",
+    "billingComingSoon": "A számlázás kezelése hamarosan elérhető lesz",
+    "managePlan": "Csomag kezelése",
+    "upgradePlan": "Csomag módosítása",
+    "availableInProPlan": "Elérhető Pro csomagban",
+    "upgradeToPro": "Frissíts Pro csomagra a kiemelt megjelenéshez",
+    "activateFeatured": "Kiemelés aktiválása",
+    "billing": "Számlázás és csomag",
+    "currentPlan": "Jelenlegi csomag",
+    "planFree": "Ingyenes",
+    "planBasic": "Alap",
+    "planPro": "Pro",
+    "planFeatures": "Csomag funkciók",
+    "unlimitedEvents": "Korlátlan események",
+    "images": "kép",
+    "errorLoadingBilling": "Hiba történt a számlázási információk betöltésekor",
+    "billingUpdated": "A számlázási információk sikeresen frissítve",
+    "errorUpdatingBilling": "Hiba történt a számlázási információk frissítésekor",
+    "saveBilling": "Változások mentése",
+    "placeActive": "✓ Hely aktív",
+    "placeInactive": "✗ Hely inaktív",
+    "placeActiveDescription": "Ez a hely látható a látogatók számára",
+    "placeInactiveDescription": "Ez a hely rejtve van a látogatók elől",
+    "billingManagement": "Számlázás kezelése",
+    "billingNote": "Megjegyzés: Manuális számlázás kezelés",
+    "billingNoteDescription": "Ez egy manuális számlázási rendszer. Nincs automatikus számla generálás. A csomag változások azonnal érvénybe lépnek.",
+    "subscriptionStatus": "Előfizetés státusza",
+    "active": "Aktív",
+    "lastUpdated": "Utolsó frissítés",
+    "readOnly": "Csak olvasható",
+    "proPlanBenefits": "Pro csomag előnyei",
+    "upgradeToProHint": "Frissíts Pro csomagra a korlátlan képek, események és kiemelt megjelenésért.",
+    "viewOrUpdatePlan": "Csomag megtekintése / frissítése",
+    "viewPlanDetails": "Csomag részletek megtekintése",
+    "siteNotFound": "Site nem található",
     "dashboardCards": {
       "userProfile": "Felhasználói profil",
       "userProfileDesc": "Profilod megtekintése és szerkesztése",
