--- a/apps/web/src/i18n/locales/hu.json
+++ b/apps/web/src/i18n/locales/hu.json
@@ -66,6 +66,63 @@
         "title": "Adatvédelem"
       }
     },
+    "pricing": {
+      "title": "Csomagok és Árazás",
+      "description": "Válassz a szabadságodnak megfelelő csomagot",
+      "subtitle": "Ez a minimum, amit manuális billinggel is jól lehet kezelni (nincs Stripe, nincs számlázás, csak státusz + érvényesség + limits).",
+      "popular": "Népszerű",
+      "footerNote": "A számlázás manuális. Nincs Stripe integráció. A státusz, érvényesség és limitek manuálisan kezelhetők.",
+      "plans": {
+        "free": {
+          "name": "Free",
+          "description": "Belépő, kipróbálás"
+        },
+        "basic": {
+          "name": "Alap",
+          "description": "\"Van már értelme\", tartalom + esemény"
+        },
+        "pro": {
+          "name": "Pro",
+          "description": "Növekedés + kiemelés + domain + extra láthatóság"
+        }
+      },
+      "categories": {
+        "places": "Helyek",
+        "visibility": "Láthatóság",
+        "events": "Események",
+        "seo": "SEO",
+        "domain": "Domain",
+        "languages": "Nyelvek",
+        "permissions": "Jogosultság",
+        "admin": "Admin",
+        "push": "Push"
+      },
+      "features": {
+        "placesCount": "Helyek száma (places)",
+        "imagesPerPlace": "Képek / hely (gallery)",
+        "heroImage": "Hero kép",
+        "contacts": "Kapcsolatok (tel/email/web)",
+        "extraFields": "Extra mezők (extras JSON)",
+        "featuredPlaces": "Kiemelt helyek (featured places)",
+        "featuredBoost": "Kiemelt boost (ranking weight)",
+        "eventsEnabled": "Események engedélyezve",
+        "eventsPerMonth": "Események száma / hó",
+        "siteSeo": "Site SEO (title/desc/image)",
+        "placeSeo": "Place SEO mezők",
+        "canonicalSupport": "Canonical/redirect támogatás",
+        "customDomain": "Custom domain",
+        "multipleDomainAliases": "Több domain alias",
+        "max5": "✓ (max 5)",
+        "additionalLanguages": "További nyelvek (hu+en+de)",
+        "siteMembers": "Site tagok (memberships)",
+        "eventLog": "Event log",
+        "pushSubscription": "PushSubscription",
+        "optionalAddon": "optional add-on"
+      },
+      "featureMatrix": {
+        "feature": "Funkció"
+      }
+    },
     "open": "Megnyitás",
     "readMore": "Tovább",
     "category": "Kategória",
@@ -149,6 +206,7 @@
   },
   "admin": {
     "titleSuffix": "Admin",
+    "edit": "Szerkesztés",
     "dashboard": "Irányítópult",
     "dashboardWelcome": "Üdvözlünk az admin felületen",
     "openPublicPage": "Publikus oldal",
@@ -275,6 +333,7 @@
     "planFree": "Ingyenes",
     "planBasic": "Alap",
     "planPro": "Pro",
+    "planBusiness": "Business",
     "planStatus": "Csomag státusz",
     "planValidUntil": "Csomag érvényes",
     "featuredSlots": "Kiemelt helyek",
@@ -374,6 +433,7 @@
     "featuredUntilHint": "Hagyd üresen a végleges kiemelt státuszhoz",
     "expires": "lejár",
     "featuredPlacement": "Kiemelt megjelenés",
+    "extraGalleryImages": "Extra galéria képek",
     "unlimitedImages": "Korlátlan képek",
     "eventDisplay": "Események megjelenítése",
     "upTo15Images": "Akár 15 kép",
@@ -413,7 +473,82 @@
     "upgradeToProHint": "Frissíts Pro csomagra a korlátlan képek, események és kiemelt megjelenésért.",
     "viewOrUpdatePlan": "Csomag megtekintése / frissítése",
     "viewPlanDetails": "Csomag részletek megtekintése",
+    "viewPlans": "Csomagok összehasonlítása",
+    "available": "Elérhető",
+    "availableFeatures": "Elérhető funkciók",
+    "billingAndPlan": "Számlázás és csomag",
+    "planInfo": "A csomagot a Site beállításokban módosíthatod.",
+    "manageFeatured": "Kiemelések kezelése",
+    "subscriptionOverview": "Előfizetések áttekintése",
+    "subscriptionOverviewSubtitle": "Site-ok előfizetései és használati adatai",
+    "plan": "Csomag",
+    "status": "Státusz",
+    "validUntil": "Érvényes",
+    "note": "Megjegyzés",
+    "places": "Helyek",
+    "featured": "Kiemelt",
+    "statusActive": "Aktív",
+    "statusSuspended": "Felfüggesztve",
+    "statusExpired": "Lejárt",
     "siteNotFound": "Site nem található",
+    "siteEdit": {
+      "tabs": {
+        "overview": "Áttekintés",
+        "domain": "Domain & URL",
+        "appearance": "Megjelenés",
+        "map": "Térkép",
+        "features": "Funkciók",
+        "subscription": "Előfizetés"
+      },
+      "overview": {
+        "title": "Alap adatok"
+      },
+      "subscription": {
+        "title": "Előfizetés",
+        "currentPlan": "Jelenlegi csomag",
+        "validUntil": "Érvényes",
+        "changePlan": "Csomag módosítása",
+        "planContents": "Csomag tartalma",
+        "usage": "Használat",
+        "availablePlans": "Elérhető csomagok",
+        "statusActive": "Aktív",
+        "statusTrial": "Próbaidőszak",
+        "statusPastDue": "Lejárt",
+        "statusCanceled": "Megszakítva",
+        "statusSuspended": "Felfüggesztve",
+        "statusExpired": "Lejárt",
+        "planUpdated": "Csomag frissítve",
+        "saved": "Mentve",
+        "advancedSettings": "Haladó beállítások",
+        "contactToUpgrade": "A csomag módosításához vedd fel a kapcsolatot az üzemeltetővel.",
+        "lockedInPro": "Pro csomagban elérhető",
+        "upgradeToPro": "Váltás Pro-ra"
+      }
+    },
+    "placesCount": "Helyek száma",
+    "featuredPlacesCount": "Kiemelt helyek",
+    "featuredPlaces": "Kiemelések",
+    "multiLanguage": "Több nyelv",
+    "customDomain": "Egyedi domain",
+    "seoSettings": "SEO beállítások",
+    "pushNotifications": "Push értesítés",
+    "limitReached": "elérve",
+    "current": "Jelenlegi",
+    "planFreeDescription": "1 hely, nincs esemény",
+    "planOfficialDescription": "Korlátlan hely, események",
+    "planProDescription": "Korlátlan hely, kiemelések, egyedi domain",
+    "planBusinessDescription": "Minden funkció, prioritás",
+    "planOfficial": "Official",
+    "featureLocked": "Ez a funkció az {plan} csomagban nem érhető el.",
+    "featureLockedDescription": "A funkció használatához frissíts egy magasabb csomagra.",
+    "featureLockedTooltip": "Magasabb csomag szükséges.",
+    "limitReachedMessage": "Elérted a csomagodban engedélyezett {feature} számát ({current} / {limit}).",
+    "limitReachedTooltip": "Frissíts csomagot vagy távolíts el elemet.",
+    "viewPlan": "Csomag megtekintése",
+    "upgradePlan": "Csomag frissítése",
+    "removeFromOther": "Eltávolítás másikról",
+    "selectPlan": "Kiválasztás",
+    "days": "nap",
     "dashboardCards": {
       "userProfile": "Felhasználói profil",
       "userProfileDesc": "Profilod megtekintése és szerkesztése",
